nginx-demo/nginx-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: my-nginx

spec:
  type: NodePort

  selector:
    app: my-nginx

  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080

    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
